syntax = "proto3";

package sopversiontracking;

// The service definition for version tracking
service SopVersionTrackingService {
  rpc GetVersion (SopRequest) returns (SopResponse);
  rpc UpdateVersion (SopVersion) returns (SopResponse);
}

message SopRequest {
  string content_id = 1;
}

message SopResponse {
  string status = 1;
  string version = 2;
}

message SopVersion {
  string content_id = 1;
  string version = 2;
}
